--- a/style.css
+++ b/style.css
@@ -1,19 +1,16 @@
-/* 
-COLORS
+:root {
+  --color-primary: #eb2f64;
+  --color-primary-light: #FF3366;
+  --color-primary-dark: #BA265D;
+  --color-grey-light-one: #faf9f9;
+  --color-grey-light-two: #f4f2f2;
+  --color-grey-light-three: #f0eeee;
+  --color-grey-light-four: #ccc;
+  --color-grey-dark-one: #333;
+  --color-grey-dark-two: #777;
+  --color-grey-dark-three: #999;
+}
 
-Primary: #eb2f64;
-Primary light: #FF3366;
-Primary dark: #BA265D;
-
-Grey light 1: #faf9f9;
-Grey light 2: #f4f2f2;
-Grey light 3: #f0eeee;
-Grey light 4: #ccc;
-
-Grey dark 1: #333;
-Grey dark 2: #777;
-Grey dark 3: #999;
-*/
 *,
 *::after,
 *::before {
@@ -28,7 +25,15 @@ html {
 }
 
 body {
-  background-color: #eb2f64;
+  font-family: "Open Sans", sans-serif;
+  background-color: pink;
+  font-weight: 400;
+  line-height: 1.6;
+  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  color: var(--color-grey-dark-two);
 }
 
 /*# sourceMappingURL=style.css.map */
