search bar done

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -11,6 +11,10 @@
     --color-grey-dark-one: #333;
     --color-grey-dark-two: #777;
     --color-grey-dark-three: #999;
+
+    --ivory: #fffff0;
+
+    --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
 }
 
 *,
