--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -3,7 +3,7 @@
 
 .logo{
     height: 3.25rem;
-    margin-left: 3rem;
+    margin-left: 2rem;
 }
 
 ///////////////////////////////////////////
@@ -27,6 +27,11 @@
         transition: all .2s;
         margin-right: -3.25rem;
 
+        &::placeholder{
+            color: var(--color-grey-light-four);
+            font-weight: 100;
+        }
+
         &:focus{
             outline: none;
             width: 100%;
@@ -46,11 +51,6 @@
             outline: none;
         }
 
-        &::-webkit-input-placeholder{
-            font-weight: 100;
-            color: var(--color-grey-light-four);
-        }
-
         &:active{
             transform: translateY(2px);
         }
@@ -66,29 +66,53 @@
 ///////////////////////////////////////////
 //USER NAVIGATION
 .user-nav{
-    &__icon-box{
 
+    display: flex;
+    align-items: center;
+    align-self: stretch;
+    
+    & > *{
+        padding: 0 2rem;
+        cursor: pointer;
+        height: 100%;
+        display: flex;
+        align-items: center;
+    }
+
+    & > *:hover{
+        background-color: var(--color-grey-light-two);
+    }
+
+    &__icon-box{
+        position: relative;
     }
 
     &__icon{
         width: 2.25rem;
         height: 2.25rem;
+        fill: var(--color-grey-dark-two);
+        
     }
 
     &__notification{
-
-    }
-
-    &__user{
-
+        font-size: .8rem;
+        height: 1.75rem;
+        width: 1.75rem;
+        border-radius: 50%;
+        background-color: var(--color-primary);
+        color: var(--ivory);
+        position: absolute;
+        top: 1.5rem;
+        right: 1.1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     &__user-photo{
-        height: 3.75rem;
-        border-radius: 50%;
-    }
-
-    &__user-name{
-
+        height: 3.9rem;
+        border-radius: 25%;
+        margin-right: 1rem;
+        box-shadow: 1rem 1rem 4.1rem -1.6rem rgba(0,0,0,0.75);;
     }
 }
