--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 
 .logo {
   height: 3.25rem;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 .search {
@@ -61,6 +61,10 @@ body {
   transition: all 0.2s;
   margin-right: -3.25rem;
 }
+.search__input::placeholder {
+  color: var(--color-grey-light-four);
+  font-weight: 100;
+}
 .search__input:focus {
   outline: none;
   width: 100%;
@@ -76,10 +80,6 @@ body {
 .search__button:focus {
   outline: none;
 }
-.search__button::-webkit-input-placeholder {
-  font-weight: 100;
-  color: var(--color-grey-light-four);
-}
 .search__button:active {
   transform: translateY(2px);
 }
@@ -89,14 +89,50 @@ body {
   fill: var(--color-grey-dark-three);
 }
 
+.user-nav {
+  display: flex;
+  align-items: center;
+  align-self: stretch;
+}
+.user-nav > * {
+  padding: 0 2rem;
+  cursor: pointer;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.user-nav > *:hover {
+  background-color: var(--color-grey-light-two);
+}
+.user-nav__icon-box {
+  position: relative;
+}
 .user-nav__icon {
   width: 2.25rem;
   height: 2.25rem;
+  fill: var(--color-grey-dark-two);
+}
+.user-nav__notification {
+  font-size: 0.8rem;
+  height: 1.75rem;
+  width: 1.75rem;
+  border-radius: 50%;
+  background-color: var(--color-primary);
+  color: var(--ivory);
+  position: absolute;
+  top: 1.5rem;
+  right: 1.1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .user-nav__user-photo {
-  height: 3.75rem;
-  border-radius: 50%;
+  height: 3.9rem;
+  border-radius: 25%;
+  margin-right: 1rem;
+  box-shadow: 1rem 1rem 4.1rem -1.6rem rgba(0, 0, 0, 0.75);
 }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
