--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -24,9 +24,14 @@
 .sidebar{
     background-color: var(--color-grey-dark-one);
     flex: 0 0 18%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
 
 .hotel-view{
     background-color: var(--ivory);
     flex: 1;
+    height: 80rem;
 }
