--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,7 +11,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: var(--ivory);
-    border-bottom: var(--color-grey-light-two);
+    border-bottom: 1px solid var(--color-grey-light-two);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,7 +27,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
 }
 
 .hotel-view{
