--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -11,7 +11,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: var(--ivory);
-    border-bottom: 1px solid var(--color-grey-light-two);
+    border-bottom: var(--line);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,5 +32,25 @@
 .hotel-view{
     background-color: var(--ivory);
     flex: 1;
-    height: 80rem;
+}
+
+.detail{
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-one);
+    border-bottom: var(--line);
+}
+
+.description{
+    font-size: 1.4rem;
+    background-color: var(--ivory);
+    box-shadow: var(--shadow-light);
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+    padding: 3rem;
+}
+
+.user-reviews{
+    background-color: yellowgreen;
+    flex: 1;
 }
