--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -279,9 +279,18 @@
     cursor: pointer;
     transition: all 2s;
 
+    & span{
+        margin-left: 3px;
+    }
+
     &:hover{
         color: var(--color-grey-dark-one);
         animation: pulsate 1s infinite;
+
+        span{
+            margin-left: 8px;
+            transition: margin-left 2s;
+        }
     }
 
     &:focus{
@@ -372,5 +381,67 @@
         &:not(:last-child){
             margin-right: -1.5rem;
         }
+    }
+}
+
+
+///////////////////////////////////////////
+//RECOMMEND
+
+.review{
+
+    background-color: var(--ivory);
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    position: relative;
+
+    &__text{
+        margin-bottom: 2rem;
+    }
+
+    &__user{
+        display: flex;
+        align-items: center;
+    }
+
+    &__photo{
+        height: 4.5rem;
+        width: 4.5rem;
+        border-radius: 50%;
+        margin-right: 1.5rem;
+    }
+
+    &__user-box{
+        margin-right: auto;
+    }
+
+    &__user-name{
+        font-size: 1.1rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        margin-bottom: .4rem;
+    }
+
+    &__user-date{
+        font-size: 1rem;
+        color: var(--color-grey-dark-3);
+    }
+
+    &__rating{
+        color: var(--color-primary);
+        font-size: 2.2rem;
+        font-weight: 300;
+    }
+
+    &::before{
+        content: "\201C";
+        position: absolute;
+        top: -2rem;
+        left: -1rem;
+        line-height: 1;
+        font-size: 13rem;
+        color: var(--color-grey-light-2);
+        font-family: sans-serif;
     }
 }
