--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -35,6 +35,7 @@
 }
 
 .detail{
+    font-size: 1.4rem;
     display: flex;
     padding: 4.5rem;
     background-color: var(--color-grey-light-one);
@@ -42,7 +43,6 @@
 }
 
 .description{
-    font-size: 1.4rem;
     background-color: var(--ivory);
     box-shadow: var(--shadow-light);
     flex: 0 0 60%;
@@ -51,6 +51,8 @@
 }
 
 .user-reviews{
-    background-color: yellowgreen;
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
