--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,77 +1,77 @@
-///////////////////////////////////////////
-//LOGO
+// /////////////////////////////////////////
+// LOGO
 
-.logo{
+.logo {
     height: 3.25rem;
     margin-left: 2rem;
 }
 
-///////////////////////////////////////////
-//SEARCH
-.search{
+// /////////////////////////////////////////
+// SEARCH
+.search {
     flex: 0 0 40%;
 
     display: flex;
     align-items: center;
     justify-content: center;
 
-    &__input{
+    &__input {
         font-family: inherit;
         font-size: inherit;
         color: inherit;
         background-color: var(--color-grey-light-two);
         border: none;
-        padding: .7rem 2rem;
+        padding: 0.7rem 2rem;
         border-radius: 10rem;
         width: 90%;
-        transition: all .2s;
+        transition: all 0.2s;
         margin-right: -3.25rem;
 
-        &::placeholder{
+        &::placeholder {
             color: var(--color-grey-light-four);
             font-weight: 100;
         }
 
-        &:focus{
+        &:focus {
             outline: none;
             width: 100%;
             background-color: var(--color-grey-light-three);
         }
     }
 
-    &__input:focus + &__button{
+    &__input:focus + &__button {
         background-color: var(--color-grey-light-three);
     }
 
-    &__button{
+    &__button {
         border: none;
         background-color: var(--color-grey-light-two);
 
-        &:focus{
+        &:focus {
             outline: none;
         }
 
-        &:active{
+        &:active {
             transform: translateY(2px);
         }
     }
 
-    &__icon{
+    &__icon {
         height: 2rem;
         width: 2rem;
         fill: var(--color-grey-dark-three);
     }
 }
 
-///////////////////////////////////////////
-//USER NAVIGATION
-.user-nav{
+// /////////////////////////////////////////
+// USER NAVIGATION
+.user-nav {
 
     display: flex;
     align-items: center;
     align-self: stretch;
-    
-    & > *{
+
+    & > * {
         padding: 0 2rem;
         cursor: pointer;
         height: 100%;
@@ -79,23 +79,23 @@
         align-items: center;
     }
 
-    & > *:hover{
+    & > *:hover {
         background-color: var(--color-grey-light-two);
     }
 
-    &__icon-box{
+    &__icon-box {
         position: relative;
     }
 
-    &__icon{
+    &__icon {
         width: 2.25rem;
         height: 2.25rem;
         fill: var(--color-grey-dark-two);
-        
+
     }
 
-    &__notification{
-        font-size: .8rem;
+    &__notification {
+        font-size: 0.8rem;
         height: 1.75rem;
         width: 1.75rem;
         border-radius: 50%;
@@ -109,31 +109,31 @@
         align-items: center;
     }
 
-    &__user-photo{
+    &__user-photo {
         height: 3.9rem;
         border-radius: 25%;
         margin-right: 1rem;
-        box-shadow: 1rem 1rem 4.1rem -1.6rem rgba(0,0,0,0.75);;
+        box-shadow: 1rem 1rem 4.1rem -1.6rem rgba(0, 0, 0, 0.75);
     }
 }
 
-///////////////////////////////////////////
-//SIDE NAVIGATION
+// /////////////////////////////////////////
+// SIDE NAVIGATION
 
-.side-nav{
+.side-nav {
     font-size: 1.4rem;
     list-style: none;
     margin-top: 3.5rem;
 
-    &__item{
+    &__item {
         position: relative;
 
-        &:not(:last-child){
-            margin-bottom: .5rem;
+        &:not(:last-child) {
+            margin-bottom: 0.5rem;
         }
     }
 
-    &__item::before{
+    &__item::before {
         content: "";
         position: absolute;
         position: 0;
@@ -142,23 +142,21 @@
         width: 3px;
         background-color: var(--color-primary);
         transform: scaleY(0);
-        transition: transform .2s,
-                    width .4s cubic-bezier(1, 0, 0, 1) .2s,
-                    background-color .1s;
+        transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
     }
 
     &__item:hover::before,
-    &__item--active::before{
+    &__item--active::before {
         transform: scaleY(1);
         width: 100%;
     }
 
-    &__item:active::before{
+    &__item:active::before {
         background-color: var(--color-primary-light);
     }
 
     &__link:link,
-    &__link:visited{
+    &__link:visited {
         color: var(--color-grey-light-one);
         text-decoration: none;
         text-transform: uppercase;
@@ -170,7 +168,7 @@
         position: relative;
     }
 
-    &__icon{
+    &__icon {
         width: 1.75rem;
         height: 1.75rem;
         margin-right: 2rem;
@@ -178,10 +176,10 @@
     }
 }
 
-///////////////////////////////////////////
-//LEGAL TEXT
+// /////////////////////////////////////////
+// LEGAL TEXT
 
-.legal{
+.legal {
     font-size: 1.2rem;
     text-align: center;
     padding: 2.5rem;
@@ -189,30 +187,30 @@
 }
 
 
-///////////////////////////////////////////
-//GALLERY
+// /////////////////////////////////////////
+// GALLERY
 
-.gallery{
+.gallery {
 
     display: flex;
 
-    &__photo{
+    &__photo {
         width: 100%;
         display: block;
     }
 }
 
 
-///////////////////////////////////////////
-//HOTEL OVERVIEW
+// /////////////////////////////////////////
+// HOTEL OVERVIEW
 
-.overview{
+.overview {
 
     display: flex;
     border-bottom: var(--line);
     align-items: center;
 
-    &__heading{
+    &__heading {
         font-size: 2.25rem;
         font-weight: 300;
         text-transform: uppercase;
@@ -220,29 +218,29 @@
         padding: 1.5rem 3rem;
     }
 
-    &__stars{
+    &__stars {
         margin-right: auto;
         display: flex;
     }
 
     &__icon-star,
-    &__icon-location{
+    &__icon-location {
         width: 1.75rem;
         height: 1.75rem;
         fill: var(--color-primary);
     }
 
-    &__icon-location{
-        margin-right: .5rem;
+    &__icon-location {
+        margin-right: 0.5rem;
     }
 
-    &__location{
+    &__location {
         font-size: 1.2rem;
         display: flex;
         vertical-align: center;
     }
 
-    &__rating{
+    &__rating {
         background-color: var(--color-primary);
         margin-left: 3rem;
         color: var(--ivory);
@@ -254,22 +252,22 @@
         flex-direction: column;
     }
 
-    &__rating-average{
+    &__rating-average {
         font-size: 2.25rem;
         font-weight: 300;
     }
 
-    &__rating-count{
-        font-size: .8rem;
+    &__rating-count {
+        font-size: 0.8rem;
         text-transform: uppercase;
     }
 }
 
 
-///////////////////////////////////////////
-//BUTTON INLINE
+// /////////////////////////////////////////
+// BUTTON INLINE
 
-.btn-inline{
+.btn-inline {
     border: none;
     color: var(--color-primary);
     font-size: inherit;
@@ -279,55 +277,50 @@
     cursor: pointer;
     transition: all 2s;
 
-    & span{
+    & span {
         margin-left: 3px;
     }
 
-    &:hover{
+    &:hover {
         color: var(--color-grey-dark-one);
         animation: pulsate 1s infinite;
 
-        span{
+        span {
             margin-left: 8px;
             transition: margin-left 2s;
         }
     }
 
-    &:focus{
+    &:focus {
         outline: none;
     }
 }
 
-@keyframes pulsate{
-    0%{
+@keyframes pulsate {
+    0% {
         transform: scale(1);
         box-shadow: none;
     }
-    50%{
+    50% {
         transform: scale(1.05);
-        box-shadow: 0 1rem 4rem rgba(0,0,0,0.35);
+        box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.35);
     }
-    100%{
+    100% {
         transform: scale(1);
         box-shadow: none;
     }
 }
 
-///////////////////////////////////////////
-//PARAGRAPH
-.paragraph:not(:last-of-type){
+// /////////////////////////////////////////
+// PARAGRAPH
+.paragraph:not(:last-of-type) {
     margin-bottom: 2rem;
 }
 
 
-
-
-
-
-
-///////////////////////////////////////////
-//LIST
-.list{
+// /////////////////////////////////////////
+// LIST
+.list {
     list-style: none;
     margin: 3rem 0;
     padding: 3rem 0;
@@ -336,59 +329,58 @@
 
     display: flex;
     flex-wrap: wrap;
-    
-    &__item{
+
+    &__item {
         flex: 0 0 50%;
-        margin-bottom: .7rem;
+        margin-bottom: 0.7rem;
     }
 
-    &__item::before{
+    &__item::before {
         content: "";
         display: inline-block;
         height: 1rem;
         width: 1rem;
         margin-right: 1rem;
-        
-        
+
+
         background-color: var(--color-primary);
-        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-image: url('../img/chevron-thin-right.svg');
         -webkit-mask-size: cover;
     }
 }
 
 
+// /////////////////////////////////////////
+// RECOMMEND
 
-///////////////////////////////////////////
-//RECOMMEND
-
-.recommend{
+.recommend {
     font-size: 1.3rem;
     color: var(--color-grey-dark-3);
     display: flex;
     align-items: center;
 
-    &__count{
+    &__count {
         margin-right: auto;
     }
 
-    &__photo{
+    &__photo {
         box-sizing: content-box;
         height: 4rem;
         width: 4rem;
         border-radius: 50%;
         border: 3px solid var(--ivory);
 
-        &:not(:last-child){
+        &:not(:last-child) {
             margin-right: -1.5rem;
         }
     }
 }
 
 
-///////////////////////////////////////////
-//RECOMMEND
+// /////////////////////////////////////////
+// RECOMMEND
 
-.review{
+.review {
 
     background-color: var(--ivory);
     box-shadow: var(--shadow-light);
@@ -396,45 +388,45 @@
     margin-bottom: 3.5rem;
     position: relative;
 
-    &__text{
+    &__text {
         margin-bottom: 2rem;
     }
 
-    &__user{
+    &__user {
         display: flex;
         align-items: center;
     }
 
-    &__photo{
+    &__photo {
         height: 4.5rem;
         width: 4.5rem;
         border-radius: 50%;
         margin-right: 1.5rem;
     }
 
-    &__user-box{
+    &__user-box {
         margin-right: auto;
     }
 
-    &__user-name{
+    &__user-name {
         font-size: 1.1rem;
         font-weight: 600;
         text-transform: uppercase;
-        margin-bottom: .4rem;
+        margin-bottom: 0.4rem;
     }
 
-    &__user-date{
+    &__user-date {
         font-size: 1rem;
         color: var(--color-grey-dark-3);
     }
 
-    &__rating{
+    &__rating {
         color: var(--color-primary);
         font-size: 2.2rem;
         font-weight: 300;
     }
 
-    &::before{
+    &::before {
         content: "\201C";
         position: absolute;
         top: -2rem;
@@ -443,5 +435,71 @@
         font-size: 13rem;
         color: var(--color-grey-light-2);
         font-family: sans-serif;
+    }
+}
+
+// /////////////////////////////////////////
+// CALL TO ACTION
+
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+
+    &__book-now {
+        text-transform: uppercase;
+        font-size: 2.1rem;
+        font-weight: 300;
+        margin-bottom: 2.5rem;
+    }
+}
+
+// /////////////////////////////////////////
+// BUTTON
+
+.btn {
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 10rem;
+    border: none;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    color: var(--ivory);
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+
+    & > * {
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        transition: all 0.2s;
+    }
+
+    &__visible {
+        padding: 2rem 7.5rem;
+    }
+
+    &__invisible {
+        position: absolute;
+        left: 0;
+        top: -100%;
+        padding: 2rem 0;
+    }
+
+    &:hover{
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+    }
+
+    &:hover &__visible {
+        transform: translateY(100%);
+    }
+
+    &:hover &__invisible {
+        top: 0;
+    }
+
+    &:focus{
+        outline: none;
+        animation: pulsate 1s infinite;
     }
 }
