--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,6 +20,14 @@
     --line: 1px solid var(--color-grey-light-two);
 }
 
+// /////////////////////////////////////////
+// BREAK POINTS
+
+$bp-largest: 75em;      //1200px
+$bp-large: 68.5em;      //1100px
+$bp-medium: 56.25em;    //900px
+$bp-small: 37.5em;      //600px
+
 *,
 *::after,
 *::before{
@@ -31,6 +39,10 @@
 html{
     font-size: 62.5%;
     box-sizing: border-box;
+
+    @media only screen and (max-width: $bp-large){
+        font-size: 50%;
+    }
 }
 
 body{
